2006-09-18 Nicolas
* Use amortisation_transaction_builder instead amortisation_transaction_builder
2006-03-10 Guillaume
* Translated amortisation method titles

2006-03-09 Guillaume
* Removed result table item
* Handle errors in Item_viewImmobilisationPeriods
* Translate immobilisation validity errors
* Forgot some workflow chains on Immobilisation and Immobilisation Line
* Added immobilisation_delivery_workflow

2006-03-02 Guillaume
* Added immobilisation skins to Delivery Cell

2006-03-01 Guillaume
* New version of immobilisations. The previous version was using 'immobilisation movements' inside an item. The new one adds the 'immobilisation movement' concept on each delivery movement. Now we can immobilise many items at once