@@ -3,11 +3,8 @@
   <record id="1" aka="AAAAAAAAAAE=">
     <pickle>
       <tuple>
-        <tuple>
-          <string>Products.DCWorkflow.States</string>
-          <string>StateDefinition</string>
-        </tuple>
-        <none/>
+        <global name="StateDefinition" module="Products.DCWorkflow.States"/>
+        <tuple/>
       </tuple>
     </pickle>
     <pickle>
@@ -50,8 +47,8 @@
                 <string>accept_decision_action</string>
                 <string>adopt_prevision</string>
                 <string>adopt_prevision_action</string>
+                <string>calculate</string>
                 <string>converge</string>
-                <string>edit</string>
                 <string>start_building</string>
               </tuple>
             </value>
