@@ -3,11 +3,8 @@
   <record id="1" aka="AAAAAAAAAAE=">
     <pickle>
       <tuple>
-        <tuple>
-          <string>Products.DCWorkflow.States</string>
-          <string>StateDefinition</string>
-        </tuple>
-        <none/>
+        <global name="StateDefinition" module="Products.DCWorkflow.States"/>
+        <tuple/>
       </tuple>
     </pickle>
     <pickle>
@@ -46,8 +43,8 @@
             <key> <string>transitions</string> </key>
             <value>
               <tuple>
+                <string>calculate</string>
                 <string>diverge</string>
-                <string>edit</string>
                 <string>start_building</string>
               </tuple>
             </value>
