@@ -1,3 +1,7 @@
+2007-10-04 Nicolas
+Update Amortisation Transaction Causality Workflow
+rename edit transition to calculate
+
 2006-09-18 Nicolas
 * Use amortisation_transaction_builder instead amortisation_transaction_builder
 2006-03-10 Guillaume
